[package]
name = "za-kolik-pojedu"
version = "0.1.0"
authors = ["strohel <matej@laitl.cz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
csv = "1"
dioxus = { version = "0.6", features = [] }
enum-map = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["local-offset"] }
tracing = "0.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
